--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
