--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@react-google-maps/api": "^2.19.3",
-    "axios": "^1.6.7",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.2.0",
@@ -27,6 +28,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.0.7"
   },
