--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@headlessui/react": "^2.2.2",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.10.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "icons": "^1.0.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.0",
